--- a/public/index.html
+++ b/public/index.html
@@ -217,8 +217,10 @@
 
     <div class="title-text-wrapper">
       <h1 class="event-info-title">Ceremony & Reception</h1>
-      <h3 class="party-date">Checkin - Saturday, August 31st @ 4pm</h3>
-      <h3 class="party-date">Checkout - Tuesday, September 2nd @ 10am</h3>
+      <h3 class="party-date">Checkin (optional) - Saturday, August 31st @ 4pm</h3>
+      <h3 class="party-date">All events - Saturday, September 1st</h3>
+      <h3 class="party-date">Checkout (optional) - Tuesday, September 2nd @ 10am</h3>
+      <h3 class="party-date">Location - Wears Valley, TN</h3>
 
     </div>
     <div id="ceremony-reception-icon-wrapper">
@@ -232,8 +234,11 @@
 
       <p class="paragraph-text">We have booked 2 large cabins, with a total of 28 bedrooms, next door to each other for
         3 nights. All main events for you to attend will be on Sunday the 1st. You may stay just for the wedding on
-        Sunday or
-        you can stay with us the full weekend.
+        Sunday or you can stay with us the full weekend.
+      </p>
+      <p class="paragraph-text">
+        Between the 2 cabins we will have 3 hot tubs, 7 outdoor decks, 2 game rooms, 5 living rooms, 4 kitchens, and a
+        few other surprises!
       </p>
       <p class="paragraph-text">The ceremony will be right outside the cabins on Sunday the 1st. The reception will be
         hosted in the
@@ -251,6 +256,7 @@
       <img src="img/lodge/balcony.jpeg">
       <img src="img/lodge/bedroom.jpeg">
       <img src="img/lodge/fridge.jpeg">
+      <img src="img/lodge/bunk_room.jpeg">
       <img src="img/lodge/hottub.jpeg">
       <img src="img/lodge/living_room.jpeg">
 
@@ -258,6 +264,8 @@
   </div>
 
   <div id="registry-section" class="animated-gradient">
+    <h2 class="thank-you-message">Registry</h2>
+    <p id="registry-message">We are incredibly grateful for your presence at our wedding. Your love and support mean the world to us. Your generosity in helping us build our future together is a cherished gift in itself. Thank you for being a part of our special day!</p>
     <a href="https://withjoy.com/victoria-and-drew-2024/registry" id="registry-button">
       <img src="img/giftbox.png" id="registry-icon" alt="party">
 
@@ -325,7 +333,7 @@
 
       <hr/>
 
-      <div class="flex-row"><h3 class="faq-emoji">🏙️</h3>
+      <div class="flex-row"><h3 class="faq-emoji">🗺️</h3>
         <h3>I’ll be visiting from out of town. What is there to do in the area?</h3></div>
       <p> First of all, thank you for making the trip out here! While the cabins are remote, there are nearby hiking
         trails and the cabins themselves will provide plenty of entertainment and things to enjoy.
@@ -351,6 +359,13 @@
 
       <hr/>
 
+      <div class="flex-row"><h3 class="faq-emoji">👔</h3>
+        <h3> What is the dress code? </h3></div>
+      <p>Please wear a suit or dress. It is not black tie</p>
+      <p>We suggest bringing hiking clothes and a bathing suit as well</p>
+
+      <hr/>
+
       <div class="flex-row"><h3 class="faq-emoji">✉️</h3>
         <h3> What’s the best way to contact you if I have additional questions? </h3></div>
       <p> Please feel free to text, call, or email Drew or Victoria at any time and we’ll get back to you as quickly as
@@ -359,118 +374,123 @@
     </div>
   </div>
 
-  <!--  <div class="wedding-party-wrapper">-->
-  <!--    <h2>Meet the Party</h2>-->
-  <!--    <div class="wedding-party-flex">-->
-  <!--      <div class="wedding-party-bio wedding-party-bachelorette">-->
-  <!--        <img src="img/friends/jenny_dent.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Jenny Dent</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+    <div class="wedding-party-wrapper">
+      <h2>Meet the Party</h2>
+      <div class="wedding-party-flex">
+        <div class="wedding-party-bio wedding-party-bachelorette">
+          <img src="img/friends/jenny_dent.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Jenny Dent</h3>
+          <p>Maid of Honor</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelorette">-->
-  <!--        <img src="img/friends/abby_oconnor.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Abby O'Connor</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+        <div class="wedding-party-bio wedding-party-bachelorette">
+          <img src="img/friends/abby_oconnor.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Abby O'Connor</h3>
+          <p>Bridesmaid</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelorette">-->
-  <!--        <img src="img/friends/emily_diener.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Emily Diener</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+        <div class="wedding-party-bio wedding-party-bachelorette">
+          <img src="img/friends/emily_diener.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Emily Diener</h3>
+          <p>Bridesmaid</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelorette">-->
-  <!--        <img src="img/friends/emily_diener.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Kelly Cerniglia</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+        <div class="wedding-party-bio wedding-party-bachelorette">
+          <img src="img/friends/emily_diener.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Kelly Cerniglia</h3>
+          <p>Bridesmaid</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelorette">-->
-  <!--        <img src="img/friends/jenny_dent.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Alex Schroeder</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+        <div class="wedding-party-bio wedding-party-bachelorette">
+          <img src="img/friends/jenny_dent.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Alex Schroeder</h3>
+          <p>Bridesmaid</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelorette">-->
-  <!--        <img src="img/friends/jenny_dent.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Anna Kornreich</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+        <div class="wedding-party-bio wedding-party-bachelorette">
+          <img src="img/friends/jenny_dent.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Anna Kornreich</h3>
+          <p>Bridesmaid</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelorette">-->
-  <!--        <img src="img/friends/jenny_dent.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Jenny Kornreich</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+        <div class="wedding-party-bio wedding-party-bachelorette">
+          <img src="img/friends/jenny_dent.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Jenny Kornreich</h3>
+          <p>Bridesmaid</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelorette">-->
-  <!--        <img src="img/friends/jenny_dent.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Caroline Kornreich</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+        <div class="wedding-party-bio wedding-party-bachelorette">
+          <img src="img/friends/jenny_dent.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Caroline Kornreich</h3>
+          <p>Bridesmaid</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelorette">-->
-  <!--        <img src="img/friends/jenna_schwartz.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Jenna Schwartz</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+        <div class="wedding-party-bio wedding-party-bachelorette">
+          <img src="img/friends/jenna_schwartz.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Cordelia Grob</h3>
+          <p>Bridesmaid</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelor">-->
-  <!--        <img src="img/friends/adam_kaz_groomsmen.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Adam Kaz</h3>-->
-  <!--        <h4>Best Man</h4>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+        <div class="wedding-party-bio wedding-party-bachelorette">
+          <img src="img/friends/jenna_schwartz.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Jenna Schwartz</h3>
+          <p>Bridesmaid</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelor">-->
-  <!--        <img src="img/friends/steven_abraham_groomsmen.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Steven Abraham</h3>-->
-  <!--        <h4>Groomsmen</h4>-->
+        <div class="wedding-party-bio wedding-party-bachelor">
+          <img src="img/friends/adam_kaz_groomsmen.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Adam Kaz</h3>
+          <p>Best Man</p>
+        </div>
 
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
-  <!--      <div class="wedding-party-bio wedding-party-bachelor">-->
-  <!--        <img src="img/friends/saul_rodríguez.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Saul Rodriguez</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+        <div class="wedding-party-bio wedding-party-bachelor">
+          <img src="img/friends/steven_abraham_groomsmen.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Steven Abraham</h3>
+          <p>Groomsmen</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelor">-->
-  <!--        <img src="img/friends/kyle_nixon_groomsmen.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Kyle Nixon</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+        <div class="wedding-party-bio wedding-party-bachelor">
+          <img src="img/friends/saul_rodríguez.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Saul Rodriguez</h3>
+          <p>Groomsmen</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelor">-->
-  <!--        <img src="img/friends/robert_zajak_groomsmen.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Robert Zajac</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+        <div class="wedding-party-bio wedding-party-bachelor">
+          <img src="img/friends/kyle_nixon_groomsmen.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Kyle Nixon</h3>
+          <p>Groomsmen</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelor">-->
-  <!--        <img src="img/friends/scottie_dent.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Divij Nagpaul</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+        <div class="wedding-party-bio wedding-party-bachelor">
+          <img src="img/friends/robert_zajak_groomsmen.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Robert Zajac</h3>
+          <p>Groomsmen</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelor">-->
-  <!--        <img src="img/friends/michael_dent_groomsmen.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Michael Dent</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
+        <div class="wedding-party-bio wedding-party-bachelor">
+          <img src="img/friends/scottie_dent.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Divij Nagpaul</h3>
+          <p>Groomsmen</p>
+        </div>
 
-  <!--      <div class="wedding-party-bio wedding-party-bachelor">-->
-  <!--        <img src="img/friends/scottie_dent.jpeg" alt="party" class="wedding-party">-->
-  <!--        <h3>Scott Dent</h3>-->
-  <!--        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem</p>-->
-  <!--      </div>-->
-  <!--    </div>-->
-  <!--  </div>-->
+        <div class="wedding-party-bio wedding-party-bachelor">
+          <img src="img/friends/michael_dent_groomsmen.jpeg" alt="party" class="wedding-party">
+          <h3 class="wedding-party-title">Michael Dent</h3>
+          <p>Groomsmen</p>
+        </div>
+
+        <div class="wedding-party-bio wedding-party-bachelor">
+          <img src="img/friends/scottie_dent.jpeg" alt="party" class="wedding-party">
+          <h3>Scott Dent</h3>
+          <p>Groomsmen</p>
+        </div>
+      </div>
+    </div>
 
   <div id="end-section" class="flex-center">
-    <p></p>
     <hr/>
+
+    <p>Thank you for reading this far. I had a lot of fun making this website from scratch</p>
     <p>Made by Drew Schwartz</p>
     <!--    <a href="https://www.flaticon.com/free-icons/gift" title="gift icons">Gift icons created by Freepik - Flaticon</a>-->
   </div>
